<resources>
    <string name="app_name">Portal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_exams">Exams</string>

    <string name="active">Active</string>
    <string name="pending">Pending</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="course_title">Course title</string>
    <string name="course_code">Course code</string>
    <string name="start">Start</string>
    <string name="lecturer">Lecturer</string>
    <string name="creator">Jude Francis</string>
    <string name="pre_exam_note">Note: Your timer starts counting as soon as you click the start button below, ensure you are fully prepared before stating this paper</string>
    <string name="cd_status_indicator">Paper status indicator</string>
    <string name="menu_exam">Exam</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="submit">Submit</string>
    <string name="finish">Finish</string>
    <string name="view_all">View all</string>
    <string name="announcements">Announcements</string>
    <string name="today_s_papers">Today\'s Papers</string>
    <string name="no_events_today">No events today</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email or Matric number</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
</resources>